[gd_scene load_steps=2 format=3 uid="uid://d2w3e4r5t6y70"]

[ext_resource type="Script" path="res://scripts/card_ui.gd" id="1_card_ui_script"]

[node name="CardUI" type="Panel"]
custom_minimum_size = Vector2(120, 180)
script = ExtResource("1_card_ui_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Card Name"
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Cost: 3"
horizontal_alignment = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "This is the card's description."
autowrap_mode = 2

[node name="PlayButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
